# PINGUI

./: .gitignore  1.txt  2.txt  3.txt  CHANGELOG.en.md  CHANGELOG.md  ISSUES.txt  README.en.md  README.md  ROADMAP.en.md  ROADMAP.md  pingui.sh  pyproject.toml
.cursor/rules/: roadmap-next.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  java-ci.yml  java.yml
.omx/context/: pingui-git-delivery-20260626T140000Z.md  pingui-merge-20260626T160000Z.md  pingui-mvp-20260626T120000Z.md  pingui-pr-20260626T150000Z.md
.omx/plans/: prd-pingui-git-delivery.md  prd-pingui-merge.md  prd-pingui-mvp.md  prd-pingui-pr.md
.omx/reviews/: code-review-git-delivery.md  code-review-merge-pr1.md  code-review-pingui-mvp.md  code-review-pr-1.md
config/: asn_hints.yaml  geoip_hints.yaml  hosts.example.yaml  hosts.windows.example.yaml
docs/: ADR_ALERTS.md  ADR_ALERT_RULES.md  ADR_DAEMON.md  ADR_HOST_PROBLEM_INDICATOR.md  ADR_IPV6.md  ADR_OBSERVABILITY.md  ADR_PROBE_MODES.md  ADR_TELEMETRY.md  ARCHITECTURE.md  CHECKLIST.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  JAVA.md  LIVING_SPEC.md  MODULES.md  MVP_SPEC.md  README.md  ROADMAP.md  SPIKE_IPV6.md  SPIKE_LOG_SINKS.md  SPIKE_PERSISTENCE.md  TESTING.md  USER_GUIDE.md
docs/en/: ADR_ALERTS.md  ADR_ALERT_RULES.md  ADR_DAEMON.md  ADR_HOST_PROBLEM_INDICATOR.md  ADR_IPV6.md  ADR_OBSERVABILITY.md  ADR_PROBE_MODES.md  ADR_TELEMETRY.md  ARCHITECTURE.md  CHECKLIST.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  JAVA.md  LIVING_SPEC.md  MODULES.md  MVP_SPEC.md  README.md  ROADMAP.md  SPIKE_IPV6.md  SPIKE_LOG_SINKS.md  SPIKE_PERSISTENCE.md  TESTING.md  USER_GUIDE.md
java/: README.en.md  README.md  build.gradle.kts  gradle.properties  pingui-java.bat  pingui-java.sh  settings.gradle.kts
java/config/: hosts.example.yaml  hosts.windows.example.yaml
java/scripts/: check-layer-deps.sh
scripts/: check_caps.sh  check_doc_parity.py  check_imports.py  ci_venv.sh  deploy.sh  run_dev.sh  setup_caps.sh  timescale_schema.sql
src/pingui/: __init__.py  __main__.py  config.py  logging_setup.py  metric_names.py  models.py  telemetry_config.py  telemetry_emit.py
systemd/: pingui-dev.service.example  pingui-java.service.example  pingui.service.example
tests/: conftest.py
tests/contract/: test_alert_webhook.py  test_tracer.py  test_worker_store.py
tests/integration/: test_tracer_network.py  test_ui_smoke.py  test_worker_run.py
tests/unit/: test_alert_rate_limiter.py  test_config.py  test_config_resolve.py  test_daemon_runner.py  test_desktop_notifier.py  test_geo_map.py  (+29 more)
(+409 files in other folders)
