[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pingui"
version = "0.1.0"
description = "Linux desktop route and ping monitor with topological visualization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PINGUI Team" }]
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "folium>=0.15",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "scapy>=2.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
timeseries = [
    "influxdb-client>=1.40",
    "psycopg[binary]>=3.1",
]

[project.scripts]
pingui = "pingui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
